# diag_tool

./: Cargo.toml  Makefile  README.md  build.rs  style.css
documents/: UDS.drawio  cmd.txt
json/: config.json  sequence.json
src/: main.rs
src/cli/: cli.rs
src/executor/: executor.rs  parameters.rs  parse_sequence.rs  securityaccess.rs  swdl.rs
src/gui/: gui.rs
src/gui/frontend/: index.html  schema.json  tauri.conf.json
src/gui/frontend/.icons/: icon.icns
src/gui/frontend/ui/: basic.js  font-awesome.min.css  index.html  style.css
src/transport/: config.rs  diag.rs  doip.rs  soad.rs
src/utils/: cli.rs  common.rs  excrypto.rs  parse_config.rs
test/: uds_test.py
