[package]
name = "diag_tool"
version = "0.1.0"
authors = [ "Tran Ngoc Hung" ]
#edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"